Updated to mss-arquillian 1.0.0-ALPHA1